# blaatur-backend

./: .gitignore  3  Procfile  README.md  pyproject.toml  requirements.txt  wsgi.py
.github/workflows/: pytest_action.yml
auth/: 3
auth/auth/: settings.py
auth/users/: models.py
auth/users/migrations/: 0001_initial.py
flaskbackend/: ASDASDASD.py  backman.py  constants.py  entur_api.py
tests/: test_api.py  testingman.py
