[tool.poetry]
name = "blaatur-backend"
version = "0.1.0"
description = "Backend for Blaatur web.app."
authors = ["Zylvian <33404765+Zylvian@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.1.7"
graphene-django = "^2.15.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
